<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/sixteen"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TopicStyle"
            android:text="@string/product_name" />

        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_name_edit_text"
                style="@style/FieldStyle"
                android:hint="@string/products"
                android:inputType="textCapWords" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TopicStyle"
            android:text="@string/product_price" />

        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_price_edit_text"
                style="@style/FieldStyle"
                android:hint="@string/price"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TopicStyle"
            android:text="@string/product_quantity" />

        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_quantity_edit_text"
                style="@style/FieldStyle"
                android:hint="@string/quantity"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TopicStyle"
            android:text="@string/supplier_name" />

        <Spinner
            android:id="@+id/product_supplier_name_spinner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fortyeight"
            android:paddingRight="@dimen/sixteen"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TopicStyle"
            android:text="@string/supplier_phone_number" />

        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_supplier_phone_number_edit_text"
                style="@style/FieldStyle"
                android:hint="@string/phone_number"
                android:inputType="phone" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>